--- a/tcc-test/src/main/resources/templates/user/user-list.html
+++ b/tcc-test/src/main/resources/templates/user/user-list.html
@@ -13,6 +13,7 @@
                 <th>用户名</th>
                 <th>性别</th>
                 <th>年龄</th>
+                <th>操作</th>
             </tr>
         </thead>
         <tbody>
@@ -21,8 +22,25 @@
                 <td th:text="${user.username}"></td>
                 <td th:text="${user.sex}"></td>
                 <td th:text="${user.age}"></td>
+                <td>
+                    <button type="button" name="del" th:attr="userId=${user.id}">删除</button>
+                </td>
             </tr>
         </tbody>
     </table>
+    <script>
+        $(function () {
+            $(document).on("click","button[name=del]",function () {
+                var userId = $(this).attr("userId");
+                $.get("/user/delUser?userId="+userId,function (reps) {
+                    if (reps.status == 1){
+                        setTimeout(function () {
+                            location.reload();
+                        },5000);
+                    }
+                });
+            });
+        });
+    </script>
 </body>
 </html>
