xa-test> tcc-test> 分布式接口幂等性: 根据唯一业务单号更新用户, 业务中有更改次数时, 多次更新不幂等

--- a/tcc-test/src/main/resources/templates/user/user-detail.html
+++ b/tcc-test/src/main/resources/templates/user/user-detail.html
@@ -19,9 +19,7 @@
         </select>
         <br>
         年龄：<input type="number" name="age" th:attr="value=${user.age}"><br>
-
-        <!--更新次数：<span th:text="${user.updateCount}"></span> <br>-->
-
+        更新次数：<span th:text="${user.updateCount}"></span> <br>
         <button type="submit">提交</button>
     </form>
 </body>
