--- a/tcc-test/src/main/resources/templates/user/user-detail.html
+++ b/tcc-test/src/main/resources/templates/user/user-detail.html
@@ -8,7 +8,7 @@
 <body style="text-align: left">
     <form style="margin: 0 auto 0 300px" method="post" action="/user/updateUser">
         <input type="hidden" name="id" th:attr="value=${user.id}" >
-        <!--<input type="hidden" name="token" th:attr="value=${token}" >-->
+        <input type="hidden" name="token" th:attr="value=${token}" >
         <input type="hidden" name="version" th:attr="value=${user.version}">
         用户名：<input type="text" name="username" th:attr="value=${user.username}"> <br>
         性别：
